--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,8 @@
+/* app/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: sans-serif;
+  @apply bg-gray-50 text-gray-900;
 }
